--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>hello worlsd</h1>
+<!-- head
+  title portfolio app: #{title}
+  link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous")
+  link(href="/public/css/style.css" rel="stylesheet" type="text/css")
+ -->
+
+ <!doctype html>
+ <head>
+   <title>Portfolio app: Home</title>
+ </head>
