--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- head
-  title portfolio app: #{title}
-  link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous")
-  link(href="/public/css/style.css" rel="stylesheet" type="text/css")
- -->
-
  <!doctype html>
  <!DOCTYPE html>
  <html lang="en">
@@ -16,6 +10,42 @@
  </head>
  <body>
   
+    <div class="myfooter">
+      <footer>
+        <div class="container text-center" id="footer">
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="/public/images/email light.png" alt="email" class="social-images">
+          </a>
+        </div>
+      </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
  </body>
  </html>
  
+ 
+  <!-- footer#myfooter
+    div.container.text-center#footer 
+      a(href="mailto:shiberoderrickwakhu@gmail.com")
+        img(src="/public/images/email light.png" alt="email" class="social-images")
+      a(href="https://github.com/blackwakhu")
+        img(src="/public/images/GitHub-logo.png", alt="github" class="social-images")
+      a(href="")
+        img(src="/public/images/twitter logo light.jpg", alt="x" class="social-images")
+      a(href="https://www.facebook.com/people/Derrick-Shibero/pfbid02wSvbw24XdZcdXhztx8agZCr4pia9KhJtxqu6wEE59eGaTFUUZKN9cQS8o5Wia85Bl/?name=xhp_nt__fb__action__open_user")
+        img(src="/public/images/facebook logo light.jpg", alt="facebook" class="social-images")
+      a(href="")
+        img(src="/public/images/WhatsApp image light.jpg", alt="whatsapp" class="social-images")
+      a(href="")
+        img(src="/public/images/LinkedIn light.png", alt="linkedin" class="social-images")
+      a(href="https://www.youtube.com/@blackafrique3789")
+        img(src="/public/images/youtube.jpg", alt="youtube" class="social-images")
+    div.row.lower
+      div.col
+      div.col.text-center 
+        span.mycopy.text-center &copy; 2023 This is the property of Derrick Shibero 
+      div.col.text-end 
+        span.mycopy.text-end  Version 0.0.1
+
+ -->
