--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
           <a href="mailto:shiberoderrickwakhu@gmail.com">
             <img src="/public/images/email light.png" alt="email" class="social-images">
           </a>
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="/public/images/email light.png" alt="email" class="social-images">
+          </a>
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="/public/images/email light.png" alt="email" class="social-images">
+          </a>
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="/public/images/email light.png" alt="email" class="social-images">
+          </a>
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="/public/images/email light.png" alt="email" class="social-images">
+          </a>
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="/public/images/email light.png" alt="email" class="social-images">
+          </a>
+        </div>
+        <div class="row lower">
+          <div class="col"></div>
+          <div class="col text-center">
+            <span class="mycopy text-center">&copy; 2023 This is the property of Derrick Shibero </span>
+          </div>
+          <div class="col text-end">
+            <span class="mycopy text-end">Version 0.0.1</span>
+          </div>
         </div>
       </footer>
     </div>
