--- a/index.html
+++ b/index.html
@@ -8,27 +8,44 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
  </head>
  <body>
-  
+  <!-- nav(class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark")
+  div.container-md 
+    a(class="navbar-brand" href="#") DS
+    button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+      span.navbar-toggler-icon
+    div.navbar.navbar-collapse#navbarSupportedContent
+      ul.navbar-nav.mx-auto.mb-2.mb-lg-0
+        li.nav-item
+          a(class="nav-link active" aria-current="page" href=home) HOME
+        li.nav-item 
+          a(class="nav-link active" aria-current="page" href=about) ABOUT
+        li.nav-item 
+          a(class="nav-link active" aria-current="page" href=skills) SKILLS
+        li.nav-item 
+          a(class="nav-link active" aria-current="page" href=projects) PROJECTS
+        li.nav-item 
+          a(class="nav-link active" href="#footer") CONTACTS -->
+ 
     <div class="myfooter">
       <footer>
         <div class="container text-center" id="footer">
           <a href="mailto:shiberoderrickwakhu@gmail.com">
-            <img src="/public/images/email light.png" alt="email" class="social-images">
+            <img src="images/email light.png" alt="email" class="social-images">
+          </a>
+          <a href="https://github.com/blackwakhu">
+            <img src="images/email light.png" alt="email" class="social-images">
           </a>
           <a href="mailto:shiberoderrickwakhu@gmail.com">
-            <img src="/public/images/email light.png" alt="email" class="social-images">
+            <img src="images/email light.png" alt="email" class="social-images">
           </a>
           <a href="mailto:shiberoderrickwakhu@gmail.com">
-            <img src="/public/images/email light.png" alt="email" class="social-images">
+            <img src="images/email light.png" alt="email" class="social-images">
           </a>
           <a href="mailto:shiberoderrickwakhu@gmail.com">
-            <img src="/public/images/email light.png" alt="email" class="social-images">
+            <img src="images/email light.png" alt="email" class="social-images">
           </a>
           <a href="mailto:shiberoderrickwakhu@gmail.com">
-            <img src="/public/images/email light.png" alt="email" class="social-images">
-          </a>
-          <a href="mailto:shiberoderrickwakhu@gmail.com">
-            <img src="/public/images/email light.png" alt="email" class="social-images">
+            <img src="images/email light.png" alt="email" class="social-images">
           </a>
         </div>
         <div class="row lower">
@@ -47,28 +64,18 @@
  </body>
  </html>
  
- 
-  <!-- footer#myfooter
-    div.container.text-center#footer 
-      a(href="mailto:shiberoderrickwakhu@gmail.com")
-        img(src="/public/images/email light.png" alt="email" class="social-images")
-      a(href="https://github.com/blackwakhu")
-        img(src="/public/images/GitHub-logo.png", alt="github" class="social-images")
-      a(href="")
-        img(src="/public/images/twitter logo light.jpg", alt="x" class="social-images")
-      a(href="https://www.facebook.com/people/Derrick-Shibero/pfbid02wSvbw24XdZcdXhztx8agZCr4pia9KhJtxqu6wEE59eGaTFUUZKN9cQS8o5Wia85Bl/?name=xhp_nt__fb__action__open_user")
-        img(src="/public/images/facebook logo light.jpg", alt="facebook" class="social-images")
-      a(href="")
-        img(src="/public/images/WhatsApp image light.jpg", alt="whatsapp" class="social-images")
-      a(href="")
-        img(src="/public/images/LinkedIn light.png", alt="linkedin" class="social-images")
-      a(href="https://www.youtube.com/@blackafrique3789")
-        img(src="/public/images/youtube.jpg", alt="youtube" class="social-images")
-    div.row.lower
-      div.col
-      div.col.text-center 
-        span.mycopy.text-center &copy; 2023 This is the property of Derrick Shibero 
-      div.col.text-end 
-        span.mycopy.text-end  Version 0.0.1
 
- -->
+      <!-- a(href="mailto:shiberoderrickwakhu@gmail.com")
+        img(src="images/email light.png" alt="email" class="social-images")
+      a(href="https://github.com/blackwakhu")
+        img(src="images/GitHub-logo.png", alt="github" class="social-images")
+      a(href="")
+        img(src="images/twitter logo light.jpg", alt="x" class="social-images")
+      a(href="https://www.facebook.com/people/Derrick-Shibero/pfbid02wSvbw24XdZcdXhztx8agZCr4pia9KhJtxqu6wEE59eGaTFUUZKN9cQS8o5Wia85Bl/?name=xhp_nt__fb__action__open_user")
+        img(src="images/facebook logo light.jpg", alt="facebook" class="social-images")
+      a(href="")
+        img(src="images/WhatsApp image light.jpg", alt="whatsapp" class="social-images")
+      a(href="")
+        img(src="images/LinkedIn light.png", alt="linkedin" class="social-images")
+      a(href="https://www.youtube.com/@blackafrique3789")
+        img(src="images/youtube.jpg", alt="youtube" class="social-images") -->
