--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
  </head>
  <body>
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+      <div class="container-md">
+        <a class="navbar-brand" href="#">DS</a>
+      </div>
+    </nav>
   <!-- nav(class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark")
   div.container-md 
     a(class="navbar-brand" href="#") DS
