--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <nav class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-md">
         <a class="navbar-brand" href="#">DS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       </div>
     </nav>
   <!-- nav(class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark")
