--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="navbar navbar-collapse" id="#navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="skills.html"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active"  href="projects.html"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href=""#></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
   <!-- nav(class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark")
