--- a/index.html
+++ b/index.html
@@ -17,42 +17,24 @@
         <div class="navbar navbar-collapse" id="#navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"></a>
+              <a class="nav-link active" aria-current="page" href="#">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html"></a>
+              <a class="nav-link active" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="skills.html"></a>
+              <a class="nav-link active" href="skills.html">SKILLS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  href="projects.html"></a>
+              <a class="nav-link active"  href="projects.html">PROJECTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href=""#></a>
+              <a class="nav-link active" href=""#>CONTACTS</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-  <!-- nav(class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark")
-  div.container-md 
-    a(class="navbar-brand" href="#") DS
-    button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
-      span.navbar-toggler-icon
-    div.navbar.navbar-collapse#navbarSupportedContent
-      ul.navbar-nav.mx-auto.mb-2.mb-lg-0
-        li.nav-item
-          a(class="nav-link active" aria-current="page" href=home) HOME
-        li.nav-item 
-          a(class="nav-link active" aria-current="page" href=about) ABOUT
-        li.nav-item 
-          a(class="nav-link active" aria-current="page" href=skills) SKILLS
-        li.nav-item 
-          a(class="nav-link active" aria-current="page" href=projects) PROJECTS
-        li.nav-item 
-          a(class="nav-link active" href="#footer") CONTACTS -->
- 
     <div class="myfooter">
       <footer>
         <div class="container text-center" id="footer">
