--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <div class="navbar navbar-collapse" id="#navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <a class="nav-link active" aria-current="page" href="#home">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">ABOUT</a>
+              <a class="nav-link active" href="#about">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="skills.html">SKILLS</a>
+              <a class="nav-link active" href="#skills">SKILLS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  href="projects.html">PROJECTS</a>
+              <a class="nav-link active"  href="#projects">PROJECTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href=""#>CONTACTS</a>
+              <a class="nav-link active" href="#footer">CONTACTS</a>
             </li>
           </ul>
         </div>
