--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </nav>
+    <div id="home"></div>
     <div class="myfooter">
       <footer>
         <div class="container text-center" id="footer">
