--- a/index.html
+++ b/index.html
@@ -35,7 +35,39 @@
         </div>
       </div>
     </nav>
-    <div id="home"></div>
+    <div id="home">
+      <div class="body-ind">
+        <div class="work1">
+          <div class="body-content">
+            <div class="row">
+              <div class="mydiv col-7">
+                <p id="entry">Hi my name is</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="body-content restind"></div>
+      </div>
+      <!-- 
+      div.work1
+        div.body-content
+          div.row
+            div.mydiv.col-7
+              p#entry Hi my name is 
+          div.row
+            div.mydiv.col-7
+              h1.display-3.innerind#name DERRICK WAKHU SHIBERO
+              h1.display-3.innerind I build things for the web and AI
+      div.body-content.restind
+        div.row
+          div.mydiv.col-7
+            p I am a software engineer based in Nairobi Kenya, who focuses on backend web development in technologies like 
+              span php, flask and node. 
+              | I am also interested in data science and machine learning especially using python. Currently I am a student at Kenyatta University currently undertaking my undergraduate degree in Computer Science.
+
+        button(type="button" class="btn btn-outline-info") 
+          a(href="/about") More about ... -->
+    </div>
     <div class="myfooter">
       <footer>
         <div class="container text-center" id="footer">
