--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 <p id="entry">Hi my name is</p>
               </div>
             </div>
+            <div class="row">
+              <div class="mydiv col-7">
+                <h1 class="display-3 innerind" id="name">derrick wakhu shibero</h1>
+                <h1 class="display-3 innerind">I build this for the web and AI</h1>
+              </div>
+            </div>
           </div>
         </div>
         <div class="body-content restind"></div>
