--- a/index.html
+++ b/index.html
@@ -62,17 +62,76 @@
             </div>
           </div>
         </div>
+        <button type="button" class="btn btn-outline-info">
+          <a href="#about">More about ...</a>
+        </button>
+      </div>
+    </div>
+    <div id="#about">
+      <div>
+        <div class="myabout">
+          <div class="about-bg">
+            <div class="body-content">
+              <div class="row">
+                <div class="col-3"></div>
+                <div class="col-7"></div>
+              </div>
+              <div class="row">
+                <div class="col-3"></div>
+                <div class="col-7"></div>
+              </div>
+              <div class="row">
+                <div class="col-3"></div>
+                <div class="col-7"></div>
+              </div>
+              <div class="text-center">
+                <button type="button" class="btn btn-outline-info">
+                  <a href="#skills">Skills...</a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- 
-      div.body-content.restind
-        div.row
-          div.mydiv.col-7
-            p I am a software engineer based in Nairobi Kenya, who focuses on backend web development in technologies like 
-              span php, flask and node. 
-              | I am also interested in data science and machine learning especially using python. Currently I am a student at Kenyatta University currently undertaking my undergraduate degree in Computer Science.
-
-        button(type="button" class="btn btn-outline-info") 
-          a(href="/about") More about ... -->
+            div.about-bg
+                div.body-content
+                    div.row
+                        div.col-3
+                        div.col-7
+                            p Hi am 
+                                span.myname derrick shibero wakhu.
+                                |  I am currently a student at
+                                span.myname  kenyatta university.
+                                |  I am pursuing an undergraduate degree in 
+                                span.myname Bachelor of Science 
+                                |  in 
+                                span.myname computer science.
+                                |  I have over two years experience working and possessing knowledge in different working primarily in 
+                                | backend development, data science and machine learning with python and also in android development with 
+                                | java. I am currently in the process of lauching my own blog website which like my youtube channel will help 
+                                | me share my knowledge of programming and other related issues.
+                    div.row 
+                        div.col-3
+                        div.col-7
+                            p Currently I reside in Nairobi, Kenya. In my spare time I like to keep myself busy reading, learning new things 
+                                | experimenting with different technologies like linux. I also occassionally play chess even though I am not that 
+                                | much of a pro. I am also interested in artificial intelligence and the capabilities it has to change the world.
+                    div.row
+                        div.col-3
+                        div.col-7
+                            p I would describe myself as: 
+                                ul 
+                                    li A team player
+                                    li A risk taker 
+                                    li A hardworker
+                                    li Somebody who is ready to listen to others 
+                                    li Somebody who is ready to learn 
+                                    li Somebody who is ready to learn from failures
+                                    li Somebody who is ready to innovate
+                    div.text-center    
+                        button(type="button" class="btn btn-outline-info")
+                            a(href="/skills") More skills... -->
     </div>
     <div class="myfooter">
       <footer>
