--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
             <div class="body-content">
               <div class="row">
                 <div class="col-3"></div>
-                <div class="col-7"></div>
+                <div class="col-7">
+                  <p>Hi am <span class="myname">derrick shibero wakhu.</span> I am currently a student at <span class="myname">kenyatta university.</span> I
+                    am pursuing an undergraduate degree in 
+                    <span class="myname"> Bachelor of Science </span> in <span class="myname">computer science.</span> I have over two years experience working 
+                    and possessing knowledge in different working primarily in backend development, data science and machine learning with python and also in 
+                    android development with java. I am currently in the process of lauching my own blog website which like my youtube channel will help me share 
+                    my knowledge of programming and other related issues.
+                  </p>
+                </div>
               </div>
               <div class="row">
                 <div class="col-3"></div>
