--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </button>
       </div>
     </div>
-    <div id="#about">
+    <div id="about">
       <div>
         <div class="myabout">
           <div class="about-bg">
