--- a/index.html
+++ b/index.html
@@ -86,11 +86,28 @@
               </div>
               <div class="row">
                 <div class="col-3"></div>
-                <div class="col-7"></div>
+                <div class="col-7">
+                  <p>Currently I reside in Nairobi, Kenya. In my spare time I like to keep myself busy reading, learning new things experimenting with different 
+                    technologies like linux. I also occassionally play chess even though I am not that much of a pro. I am also interested in artificial 
+                    intelligence and the capabilities it has to change the world.
+                  </p>
+                </div>
               </div>
               <div class="row">
                 <div class="col-3"></div>
-                <div class="col-7"></div>
+                <div class="col-7">
+                  <p>I would describe myself as 
+                    <ul>
+                      <li>A team player</li>
+                      <li>A risk taker </li>
+                      <li>A hardworker</li>
+                      <li>Somebody who is ready to listen to others </li>
+                      <li>Somebody who is ready to learn </li>
+                      <li>Somebody who is ready to learn from failures</li>
+                      <li>Somebody who is ready to innovate</li>
+                    </ul>
+                  </p>
+                </div>
               </div>
               <div class="text-center">
                 <button type="button" class="btn btn-outline-info">
@@ -102,32 +119,6 @@
         </div>
       </div>
       <!-- 
-            div.about-bg
-                div.body-content
-                    div.row
-                        div.col-3
-                        div.col-7
-                            p Hi am 
-                                span.myname derrick shibero wakhu.
-                                |  I am currently a student at
-                                span.myname  kenyatta university.
-                                |  I am pursuing an undergraduate degree in 
-                                span.myname Bachelor of Science 
-                                |  in 
-                                span.myname computer science.
-                                |  I have over two years experience working and possessing knowledge in different working primarily in 
-                                | backend development, data science and machine learning with python and also in android development with 
-                                | java. I am currently in the process of lauching my own blog website which like my youtube channel will help 
-                                | me share my knowledge of programming and other related issues.
-                    div.row 
-                        div.col-3
-                        div.col-7
-                            p Currently I reside in Nairobi, Kenya. In my spare time I like to keep myself busy reading, learning new things 
-                                | experimenting with different technologies like linux. I also occassionally play chess even though I am not that 
-                                | much of a pro. I am also interested in artificial intelligence and the capabilities it has to change the world.
-                    div.row
-                        div.col-3
-                        div.col-7
                             p I would describe myself as: 
                                 ul 
                                     li A team player
