--- a/index.html
+++ b/index.html
@@ -119,6 +119,69 @@
         </div>
       </div>
     </div>
+    <div id="skills">
+      <div class="skills-bg">
+        <div class="body-content">
+          <p>I have skills in the following areas
+            <ul> 
+            <li> python 
+              <ul>
+                <li>data science and machine learning with numpy, pandas and sci-kit learn </li>
+                <li>data visualisation with matplotlib and seaborn</li>
+                <li>web development with flask, fastapi and django </li>
+                <li>database intergration in python with mysql, mongodb and sqlite3</li>
+                <li>graphical user with kivy and tkinter </li>
+                <li>language processing with NLTK and textblob</li>
+                <li>image processing with opencv and pillow</li>
+                <li>webscraping </li>
+              </ul>
+            </li>
+            <li>javascript 
+              <ul>
+                <li>vanilla javascript </li>
+                <li>express js</li>
+                <li>node js</li>
+              </ul>
+            </li>
+            <li>java 
+              <ul>
+                <li>graphical user interface </li>
+                <li>database intergration with mysql, mongodb and sqlite3</li>
+                <li>android development </li>
+              </ul>
+            </li>
+            <li>php </li>
+            <li>c/c++</li>
+            <li> css 
+              <ul> 
+                li vanilla css 
+                li bootstrap
+              </ul>
+            </li>
+            li linux operating system 
+            li mongodb 
+            li mysql and sqlite3 
+            li microsoft office 
+              ul 
+                li excel spreadsheets
+                li microsoft word 
+                li powerpoint presentation 
+                li ms publisher  
+            </ul>
+          </p>
+        </div>
+        <div class="text-center">
+          <button type="button" class="btn btn-outline-info">
+            <a href="#projects">More projects</a>
+          </button>
+        </div>
+      </div>
+      <!-- div.skills-bg
+      div.body-content
+      div.text-center
+        button(type="button" class="btn btn-outline-info")
+          a(href="/projects") More projects ... -->
+    </div>
     <div class="myfooter">
       <footer>
         <div class="container text-center" id="footer">
