--- a/index.html
+++ b/index.html
@@ -158,15 +158,17 @@
                 li bootstrap
               </ul>
             </li>
-            li linux operating system 
-            li mongodb 
-            li mysql and sqlite3 
-            li microsoft office 
-              ul 
-                li excel spreadsheets
-                li microsoft word 
-                li powerpoint presentation 
-                li ms publisher  
+            <li>linux operating system like linux and windows</li>
+            <li>mongodb </li>
+            <li>mysql and sqlite3 </li>
+            <li>microsoft office 
+              <ul>
+                <li>excel spreadsheets</li>
+                <li>microsoft word </li>
+                <li>powerpoint presentation </li>
+                <li>ms publisher  </li>
+              </ul>
+            </li>
             </ul>
           </p>
         </div>
@@ -176,11 +178,6 @@
           </button>
         </div>
       </div>
-      <!-- div.skills-bg
-      div.body-content
-      div.text-center
-        button(type="button" class="btn btn-outline-info")
-          a(href="/projects") More projects ... -->
     </div>
     <div class="myfooter">
       <footer>
