--- a/index.html
+++ b/index.html
@@ -179,6 +179,123 @@
         </div>
       </div>
     </div>
+    <div id="projects">
+      <!-- div.first-bg 
+        div.body-content 
+            div.row
+                div.col-3
+                div.col-7
+                    p Over the course of time I have done many small projects which can easily be accessed in 
+                        a(class="myproject-a" href="https://github.com/blackwakhu") github page.
+                        |  Some of the projects I have done include: 
+                        ul 
+                            li 
+                                a(class="myproject-a" href="#port") Portfolio website
+                            li 
+                                a(class="myproject-a" href="#python-phonebooke") Python phonebook using mongodb
+                            li 
+                                a(class="myproject-a" href="#cpp-blackjack") C++ Black jack
+                            li 
+                                a(class="myproject-a" href="#cunit") C unit converter
+                            li 
+                                a(class="myproject-a" href="#dictionary") Python dictionary 
+                            li 
+                                a(class="myproject-a" href="#phpstudent") Php student registration 
+                            li 
+                                a(class="myproject-a" href="#pythoncalculator") Python calculator
+                            li 
+                                a(class="myproject-a" href="#javalib") Java library program 
+                            li 
+                                a(class="myproject-a" href="#datascience") Data science in python 
+    div.second-bg 
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#port This portfolio website
+                p This is a web application within which this content sits on. I build this app using nodejs and express as the backend 
+                    |  technologies. In the front end I utilised bootstrap which is a CSS framework to style my work. The main use of this 
+                    |  website is to help with the process of marketing and getting close to my clients. It provides a me and my clients a 
+                    |  platform where i can post my material and where they can get to see me and decide my suitability to the tasks. The code 
+                    |  to this site is not public but you can contact me if you wish to have one.
+                    a(href="#footer")   Contacts ...
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#python-phonebooke Python phonebook app 
+                p This is a small mini-python project which uses python and mongodb to store data. It uses pymongo library to create a link 
+                    |  between python and mongodb. It is though a CLI program but plans are there to add a kivy based interface inorder to interact 
+                    |  with the user. it has some basic functions like adding a contact, checking if the contact exists, deleting a contact etc. The 
+                    |  code is publicly available in my github repository. 
+                    a(href="https://github.com/blackwakhu/python-phonebook-mongo") link>>
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#cpp-blackjack C++ Black jack 
+                p While this might not be close to the real game, this command line interface card game is among the multiple C++ programs I have developed.
+                    |  It uses the random function of c++ and also includes the use of some object oriented topics like classes. It also utilizes the use of header 
+                    |  files to store some of the codes and connect to others. 
+                    a(href="https://github.com/blackwakhu/cpp-black-jack")  link>>
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#cunit C unit converter 
+                p While this application is still a command line interface application, it stills shows some of the knowledge that I have acquired in C programming 
+                    |  language like  use of header files and macros. This program can do many many conversions including 
+                    ul 
+                        li currency 
+                        li volume 
+                        li weight 
+                        li temperature 
+                        li length 
+                    |  While some values need to be adjusted like the currency, the rest are within the internation standards. 
+                    a(href="https://github.com/blackwakhu/unit-converter-c") link >>
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#dictionary Python dictionary 
+                p In this project I created two one for the command and the other for the web. They both work the same by utilising the textblob library that allows the user 
+                    |  to find the meanings of words or find the grammaticall transformations in words like the plurals, singulars, spellings etc. The files for the web app 
+                    |  are sadly not available. But the backend technology used was flask.
+                    a(href="https://github.com/blackwakhu/terminal-dictionary-python") link >>
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#phpstudent Php student registration 
+                p This app was build using php as the backend and sqlite3 as the database. It is a small application that performs some of the basic database CRUD operations. The 
+                    |  frontend technology I used was bootstrap. In this app the user is entering some details about a student which are inturn being saved in a database. 
+                    a(href="https://github.com/blackwakhu/StudentRegistration-php-sqlite3") link>>
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#pythoncalculator Python calculator
+                p In this application I utilised the use of the kivy library to build my app. It does the operations of a basic calculator like addition, subtraction, multiplication 
+                    |  and division. 
+                    a(href="https://github.com/blackwakhu/kivy_calculator") link >>
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#javalib Java library program 
+                p In this application, it consists of a java application integrating with a database which is sqlite3. This application is used to perform some CRUD applications like 
+                    |  add a book, borrow a book, return a book, reserve a book. 
+                    a(href="https://github.com/blackwakhu/libraryjava") link>> 
+        div.row 
+            div.col-3
+            div.col-7
+                h1.display-5#datascience Data science in python 
+                p I have done very many projects for data science and machine learning utilising some of the python libraries like numpy, pandas, seaborn, matplotlib, scikit learn. In all 
+                    |  I have mostly made them backend and utilised the flask library. some notable ones include 
+                    ul 
+                        li
+                            a(href="https://github.com/blackwakhu/feedgrains") Feed grains dataset
+                        li 
+                            a(href="https://github.com/blackwakhu/abalone") Abalone dataset 
+                        li  
+                            a(href="https://github.com/blackwakhu/communities") Communities dataset 
+                        li
+                            a(href="https://github.com/blackwakhu/shuttle-landing-control") Shuttle landing control dataset
+                        li
+                            a(href="https://github.com/blackwakhu/marketing-campaing") Marketing campaign dataset -->
+    </div>
     <div class="myfooter">
       <footer>
         <div class="container text-center" id="footer">
