--- a/index.html
+++ b/index.html
@@ -180,33 +180,49 @@
       </div>
     </div>
     <div id="projects">
-      <!-- div.first-bg 
-        div.body-content 
-            div.row
-                div.col-3
-                div.col-7
-                    p Over the course of time I have done many small projects which can easily be accessed in 
-                        a(class="myproject-a" href="https://github.com/blackwakhu") github page.
-                        |  Some of the projects I have done include: 
-                        ul 
-                            li 
-                                a(class="myproject-a" href="#port") Portfolio website
-                            li 
-                                a(class="myproject-a" href="#python-phonebooke") Python phonebook using mongodb
-                            li 
-                                a(class="myproject-a" href="#cpp-blackjack") C++ Black jack
-                            li 
-                                a(class="myproject-a" href="#cunit") C unit converter
-                            li 
-                                a(class="myproject-a" href="#dictionary") Python dictionary 
-                            li 
-                                a(class="myproject-a" href="#phpstudent") Php student registration 
-                            li 
-                                a(class="myproject-a" href="#pythoncalculator") Python calculator
-                            li 
-                                a(class="myproject-a" href="#javalib") Java library program 
-                            li 
-                                a(class="myproject-a" href="#datascience") Data science in python 
+      <div class="first-bg">
+        <div class="body-content">
+          <div class="row">
+            <div class="col-3"></div>
+            <div class="col-7">
+              <p>Over the course of time I have done many small projects which can easily be accessed in 
+                <a class="myproject-a" href="https://github.com/blackwakhu"> github page.</a> Some of the projects I have done include: 
+                <ul >
+                  <li> 
+                      <a class="myproject-a" href="#port">Portfolio website</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#python-phonebooke">Python phonebook using mongodb</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#cpp-blackjack">C++ Black jack</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#cunit">C unit converter</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#dictionary">Python dictionary </a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#phpstudent">Php student registration </a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#pythoncalculator">Python calculator</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#javalib">Java library program </a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#datascience">Data science in python</a>
+                      </li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="second-bg"></div>
+      <!-- 
     div.second-bg 
         div.row 
             div.col-3
