--- a/index.html
+++ b/index.html
@@ -221,19 +221,55 @@
           </div>
         </div>
       </div>
-      <div class="second-bg"></div>
+      <div class="second-bg">
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="port">This portfolio website</h1>
+            <p>This is a web application within which this content sits on. I build this app using nodejs and express as the backend 
+                technologies. In the front end I utilised bootstrap which is a CSS framework to style my work. The main use of this 
+                website is to help with the process of marketing and getting close to my clients. It provides a me and my clients a 
+                platform where i can post my material and where they can get to see me and decide my suitability to the tasks. The code 
+                to this site is not public but you can contact me if you wish to have one.
+                <a href="#footer"> Contacts ...</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7"></div>
+        </div>
+      </div>
       <!-- 
-    div.second-bg 
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#port This portfolio website
-                p This is a web application within which this content sits on. I build this app using nodejs and express as the backend 
-                    |  technologies. In the front end I utilised bootstrap which is a CSS framework to style my work. The main use of this 
-                    |  website is to help with the process of marketing and getting close to my clients. It provides a me and my clients a 
-                    |  platform where i can post my material and where they can get to see me and decide my suitability to the tasks. The code 
-                    |  to this site is not public but you can contact me if you wish to have one.
-                    a(href="#footer")   Contacts ...
+
         div.row 
             div.col-3
             div.col-7
