--- a/index.html
+++ b/index.html
@@ -237,7 +237,14 @@
         </div>
         <div class="row">
           <div class="col3"></div>
-          <div class="col-7"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="python-phonebooke"> Python phonebook app </h1>
+            <p>This is a small mini-python project which uses python and mongodb to store data. It uses pymongo library to create a link 
+                between python and mongodb. It is though a CLI program but plans are there to add a kivy based interface inorder to interact 
+                with the user. it has some basic functions like adding a contact, checking if the contact exists, deleting a contact etc. The 
+                code is publicly available in my github repository. 
+                <a href="https://github.com/blackwakhu/python-phonebook-mongo"> link>></a>
+          </div>
         </div>
         <div class="row">
           <div class="col3"></div>
@@ -269,16 +276,6 @@
         </div>
       </div>
       <!-- 
-
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#python-phonebooke Python phonebook app 
-                p This is a small mini-python project which uses python and mongodb to store data. It uses pymongo library to create a link 
-                    |  between python and mongodb. It is though a CLI program but plans are there to add a kivy based interface inorder to interact 
-                    |  with the user. it has some basic functions like adding a contact, checking if the contact exists, deleting a contact etc. The 
-                    |  code is publicly available in my github repository. 
-                    a(href="https://github.com/blackwakhu/python-phonebook-mongo") link>>
         div.row 
             div.col-3
             div.col-7
