--- a/index.html
+++ b/index.html
@@ -248,46 +248,18 @@
         </div>
         <div class="row">
           <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-        <div class="row">
-          <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-        <div class="row">
-          <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-        <div class="row">
-          <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-        <div class="row">
-          <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-        <div class="row">
-          <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-        <div class="row">
-          <div class="col3"></div>
-          <div class="col-7"></div>
-        </div>
-      </div>
-      <!-- 
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#cpp-blackjack C++ Black jack 
+          <div class="col-7">
+            h1.display-5#cpp-blackjack C++ Black jack 
                 p While this might not be close to the real game, this command line interface card game is among the multiple C++ programs I have developed.
                     |  It uses the random function of c++ and also includes the use of some object oriented topics like classes. It also utilizes the use of header 
                     |  files to store some of the codes and connect to others. 
                     a(href="https://github.com/blackwakhu/cpp-black-jack")  link>>
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#cunit C unit converter 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            h1.display-5#cunit C unit converter 
                 p While this application is still a command line interface application, it stills shows some of the knowledge that I have acquired in C programming 
                     |  language like  use of header files and macros. This program can do many many conversions including 
                     ul 
@@ -298,39 +270,49 @@
                         li length 
                     |  While some values need to be adjusted like the currency, the rest are within the internation standards. 
                     a(href="https://github.com/blackwakhu/unit-converter-c") link >>
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#dictionary Python dictionary 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            h1.display-5#dictionary Python dictionary 
                 p In this project I created two one for the command and the other for the web. They both work the same by utilising the textblob library that allows the user 
                     |  to find the meanings of words or find the grammaticall transformations in words like the plurals, singulars, spellings etc. The files for the web app 
                     |  are sadly not available. But the backend technology used was flask.
                     a(href="https://github.com/blackwakhu/terminal-dictionary-python") link >>
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#phpstudent Php student registration 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            h1.display-5#phpstudent Php student registration 
                 p This app was build using php as the backend and sqlite3 as the database. It is a small application that performs some of the basic database CRUD operations. The 
                     |  frontend technology I used was bootstrap. In this app the user is entering some details about a student which are inturn being saved in a database. 
                     a(href="https://github.com/blackwakhu/StudentRegistration-php-sqlite3") link>>
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#pythoncalculator Python calculator
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            h1.display-5#pythoncalculator Python calculator
                 p In this application I utilised the use of the kivy library to build my app. It does the operations of a basic calculator like addition, subtraction, multiplication 
                     |  and division. 
                     a(href="https://github.com/blackwakhu/kivy_calculator") link >>
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#javalib Java library program 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            h1.display-5#javalib Java library program 
                 p In this application, it consists of a java application integrating with a database which is sqlite3. This application is used to perform some CRUD applications like 
                     |  add a book, borrow a book, return a book, reserve a book. 
                     a(href="https://github.com/blackwakhu/libraryjava") link>> 
-        div.row 
-            div.col-3
-            div.col-7
-                h1.display-5#datascience Data science in python 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            h1.display-5#datascience Data science in python 
                 p I have done very many projects for data science and machine learning utilising some of the python libraries like numpy, pandas, seaborn, matplotlib, scikit learn. In all 
                     |  I have mostly made them backend and utilised the flask library. some notable ones include 
                     ul 
@@ -343,7 +325,10 @@
                         li
                             a(href="https://github.com/blackwakhu/shuttle-landing-control") Shuttle landing control dataset
                         li
-                            a(href="https://github.com/blackwakhu/marketing-campaing") Marketing campaign dataset -->
+                            a(href="https://github.com/blackwakhu/marketing-campaing") Marketing campaign dataset
+          </div>
+        </div>
+      </div>
     </div>
     <div class="myfooter">
       <footer>
