--- a/index.html
+++ b/index.html
@@ -297,38 +297,47 @@
         <div class="row">
           <div class="col3"></div>
           <div class="col-7">
-            <h1 class="display-5" id="pythoncalculator Python calculator</h1>
-                p In this application I utilised the use of the kivy library to build my app. It does the operations of a basic calculator like addition, subtraction, multiplication 
-                    |  and division. 
-                    a(href="https://github.com/blackwakhu/kivy_calculator") link >>
+            <h1 class="display-5" id="pythoncalculator"> Python calculator</h1>
+                <p> In this application I utilised the use of the kivy library to build my app. It does the operations of a basic calculator like addition, subtraction, multiplication 
+                    and division. 
+                    <a href="https://github.com/blackwakhu/kivy_calculator"> link >></a>
+                </p>
           </div>
         </div>
         <div class="row">
           <div class="col3"></div>
           <div class="col-7">
-            <h1 class="display-5" id="javalib Java library program </h1>
-                p In this application, it consists of a java application integrating with a database which is sqlite3. This application is used to perform some CRUD applications like 
-                    |  add a book, borrow a book, return a book, reserve a book. 
-                    a(href="https://github.com/blackwakhu/libraryjava") link>> 
+            <h1 class="display-5" id="javalib"> Java library program </h1>
+                <p> In this application, it consists of a java application integrating with a database which is sqlite3. This application is used to perform some CRUD applications like 
+                  add a book, borrow a book, return a book, reserve a book. 
+                    <a href="https://github.com/blackwakhu/libraryjava"> link>> </a>
+                  </p>
           </div>
         </div>
         <div class="row">
           <div class="col3"></div>
           <div class="col-7">
-            <h1 class="display-5" id="datascience Data science in python </h1>
-                p I have done very many projects for data science and machine learning utilising some of the python libraries like numpy, pandas, seaborn, matplotlib, scikit learn. In all 
-                    |  I have mostly made them backend and utilised the flask library. some notable ones include 
-                    ul 
-                        li
-                            a(href="https://github.com/blackwakhu/feedgrains") Feed grains dataset
-                        li 
-                            a(href="https://github.com/blackwakhu/abalone") Abalone dataset 
-                        li  
-                            a(href="https://github.com/blackwakhu/communities") Communities dataset 
-                        li
-                            a(href="https://github.com/blackwakhu/shuttle-landing-control") Shuttle landing control dataset
-                        li
-                            a(href="https://github.com/blackwakhu/marketing-campaing") Marketing campaign dataset
+            <h1 class="display-5" id="datascience"> Data science in python </h1>
+                <p> I have done very many projects for data science and machine learning utilising some of the python libraries like numpy, pandas, seaborn, matplotlib, scikit learn. In all 
+                    I have mostly made them backend and utilised the flask library. some notable ones include 
+                    <ul> 
+                        <li>
+                            <a href="https://github.com/blackwakhu/feedgrains"> Feed grains dataset</a>
+                            </li>
+                        <li> 
+                            <a href="https://github.com/blackwakhu/abalone"> Abalone dataset </a>
+                            </li>
+                        <li>  
+                            <a href="https://github.com/blackwakhu/communities"> Communities dataset </a>
+                            </li>
+                        <li>
+                            <a href="https://github.com/blackwakhu/shuttle-landing-control"> Shuttle landing control dataset</a>
+                            </li>
+                        <li>
+                            <a href="https://github.com/blackwakhu/marketing-campaing"> Marketing campaign dataset</a>
+                            </li>
+                      </ul>
+                  </p>
           </div>
         </div>
       </div>
