--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <img src="images/facebook logo light.jpg", alt="facebook" class="social-images">
           </a>
           <a href="">
-            <img src="images/LinkedIn light.png", alt="linkedin" class="social-images">
+            <img src="images/linkedin.jpg", alt="linkedin" class="social-images">
           </a>
           <a href="https://www.youtube.com/@blackafrique3789">
             <img src="images/youtube.jpg", alt="youtube" class="social-images">
