--- a/index.html
+++ b/index.html
@@ -360,6 +360,9 @@
           <a href="">
             <img src="images/linkedin.jpg", alt="linkedin" class="social-images">
           </a>
+         <a href="https://wa.me/+254114386583">
+            <img src="images/whatsapp.jpg", alt="whatsapp" class="social-images">
+          </a>
           <a href="https://www.youtube.com/@blackafrique3789">
             <img src="images/youtube.jpg", alt="youtube" class="social-images">
           </a>
