--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         </div>
         <div class="row">
           <div class="col3"></div>
-          <div class="col-7">
+          <div class="col-7-">
             <h1 class="display-5" id="javalib"> Java library program </h1>
                 <p> In this application, it consists of a java application integrating with a database which is sqlite3. This application is used to perform some CRUD applications like 
                   add a book, borrow a book, return a book, reserve a book. 
