hide some div tags

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </button>
       </div>
     </div>
-    <div id="about">
+    <div id="about" hidden>
       <div>
         <div class="myabout">
           <div class="about-bg">
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-    <div id="skills">
+    <div id="skills" hidden>
       <div class="skills-bg">
         <div class="body-content">
           <p>I have skills in the following areas
@@ -142,6 +142,7 @@
                 <li>vanilla javascript </li>
                 <li>express js</li>
                 <li>node js</li>
+                <li>JQuery</li>
               </ul>
             </li>
             <li>java 
@@ -180,7 +181,7 @@
         </div>
       </div>
     </div>
-    <div id="projects">
+    <div id="projects" hidden>
       <div class="first-bg">
         <div class="body-content">
           <div class="row">
