added extra functions for jquery

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="navbar navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">HOME</a>
+              <a class="nav-link active" aria-current="page"><span class="homebtn">HOME</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#about">ABOUT</a>
+              <a class="nav-link active"><span class="aboutbtn">ABOUT</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#skills">SKILLS</a>
+              <a class="nav-link active"><span class="skillsbtn">SKILLS</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  href="#projects">PROJECTS</a>
+              <a class="nav-link active"><span class="projectsbtn">PROJECTS</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#footer">CONTACTS</a>
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-outline-info">
+        <button type="button" class="btn btn-outline-info aboutbtn">
           <a href="#about">More about ...</a>
         </button>
       </div>
@@ -111,7 +111,7 @@
                 </div>
               </div>
               <div class="text-center">
-                <button type="button" class="btn btn-outline-info">
+                <button type="button" class="btn btn-outline-info skillsbtn">
                   <a href="#skills">Skills...</a>
                 </button>
               </div>
@@ -175,7 +175,7 @@
           </p>
         </div>
         <div class="text-center">
-          <button type="button" class="btn btn-outline-info">
+          <button type="button" class="btn btn-outline-info projects">
             <a href="#projects">More projects</a>
           </button>
         </div>
