--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a class="active" href="#home">HOME</a>
+    <a href="#news">ABOUT</a>
+    <a href="#contact">SKILLS</a>
+    <a href="#about">PROJECTS</a>
+    <a href="#contact">CONTACTS</a>
    </div>
   <script src="script.js"></script>
   <!-- jQuery code-->
