--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" id="homebtn">HOME</a>
+    <a class="active" class="homebtn">HOME</a>
     <a class="aboutbtn">ABOUT</a>
-    <a href="#contact">SKILLS</a>
-    <a href="#about">PROJECTS</a>
+    <a class="skillsbtn">SKILLS</a>
+    <a class="projectbtn">PROJECTS</a>
     <a href="#contact">CONTACTS</a>
    </div>
    <div id="home">
@@ -151,7 +151,7 @@
           </p>
         </div>
         <div class="text-center">
-          <button type="button" class="btn btn-outline-info projects">
+          <button type="button" class="btn btn-outline-info projectbtn">
             <a href="#projects">More projects</a>
           </button>
         </div>
