--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" class="homebtn">HOME</a>
+    <a class="active homebtn">HOME</a>
     <a class="aboutbtn">ABOUT</a>
     <a class="skillsbtn">SKILLS</a>
     <a class="projectbtn">PROJECTS</a>
