--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="projectbtn">PROJECTS</a>
     <a href="#contact">CONTACTS</a>
    </div>
-  <div class="data">
+  <div class="data-port-content">
      <div id="home">
         <div class="body-ind">
           <div class="work1">
