added the ogp protocol

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph Protocol meta tags -->
+      <!-- important ones -->
+    <meta property="og:title" content="Derrick Shibero Wakhu Page">
+    <meta property="og:description" content="portfolio application">
+    <meta property="og:image" content="URL to your featured image">
+    <meta property="og:url" content="https://blackwakhu.github.io">
+      <!-- optional ones -->
+    <meta property="og:type" content="website">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
