--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    .data-port-content{
+      width: 100%;
+      height: 100%;
+      min-height: 500px;
+    }
+  </style>
 </head>
 <body>
   <div class="topnav">
