--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       height: 100%;
       min-height: 500px;
     }
+    #name {
+      font-stretch: ultra-expanded;
+      text-align: left;
+      text-decoration: wavy;
+      letter-spacing: 5px;
+      text-shadow: 5px 5px 2px rgba(186, 184, 108, .4);
+      font-family: cursive, "Courier New", Courier, monospace;
+    }
   </style>
 </head>
 <body>
