--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       text-shadow: 5px 5px 2px rgba(186, 184, 108, .4);
       font-family: cursive, "Courier New", Courier, monospace;
     }
+      .myname, #name{
+    text-transform: capitalize;
+  }
   </style>
 </head>
 <body>
