--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
       text-shadow: 5px 5px 2px rgba(186, 184, 108, .4);
       font-family: cursive, "Courier New", Courier, monospace;
     }
-      .myname, #name{
-    text-transform: capitalize;
-  }
+    .myname, #name{
+      text-transform: capitalize;
+    }
+    .body-ind, .myabout, .skills-bg, .first-bg, .second-bg{
+      background-size: cover;
+      background-position: fixed;
+      background-repeat: no-repeat;
+      padding: 2rem;
+    }
   </style>
 </head>
 <body>
