--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
       width: 100%;
       height: 100%;
       min-height: 500px;
-    }
-    .myname, #name{
-      text-transform: capitalize;
+      margin-top: 60px;
     }
     .body-ind, .myabout, .skills-bg, .first-bg, .second-bg{
       background-size: cover;
       background-position: fixed;
       background-repeat: no-repeat;
       padding: 2rem;
+    }
+    .topnav{
+      position: fixed;
+      top: 0;
     }
   </style>
 </head>
