--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
       min-height: 500px;
       margin-top: 60px;
     }
-    .body-ind, .myabout, .skills-bg, .first-bg, .second-bg{
-      background-size: cover;
-      background-position: fixed;
-      background-repeat: no-repeat;
-      padding: 2rem;
+    #entry{
+      font-size: 19px;
     }
     .topnav{
       position: fixed;
