did some css html home page

--- a/index.html
+++ b/index.html
@@ -23,11 +23,29 @@
     }
     #entry{
       font-size: 19px;
+      text-align: left;
+      color: rgb(80, 200, 120);
+      font-size: 2rem;
+      font-family:  Courier, "Lucida Console", "Courier New", monospace;
     }
     .topnav{
       position: fixed;
       top: 0;
       width: 100%;
+    }
+    .body-content{
+      margin-left: 2rem;
+    }
+    .footer{
+      background-size: cover;
+      padding: 10px;
+    }
+    .innerind{
+      color: blue;    
+    }
+    .restind{
+      color: beige;
+      font-size: 1.2rem;
     }
   </style>
 </head>
